@@ -460,8 +460,9 @@ elseif expert == 1
     'CS2 with SIC (22)',... 
     'CS3 with SIC (30; IN DEVELOPMENT)',... 
     'CS3 with fast SIC (33; IN DEVELOPMENT)',... 
+    'CS4 (40; IN DEVELOPMENT)',... 
   };
-  SRP.values  = {10 20 12 22 30 33}; 
+  SRP.values  = {10 20 12 22 30 33 40}; 
 elseif expert > 1
   SRP.labels  = {...
     'CS1 without SIC (10)',...
@@ -472,8 +473,9 @@ elseif expert > 1
     'CS2 with SIC with optimization (22)',... 
     'CS3 with SIC (30; IN DEVELOPMENT)',... 
     'CS3 with fast SIC with optimization (33; IN DEVELOPMENT)',... 
+    'CS4 (40; IN DEVELOPMENT)',... 
     };
-  SRP.values  = {10 11 12 20 21 22 30 33};
+  SRP.values  = {10 11 12 20 21 22 30 33 40};
 end
 SRP.help    = {
   ['CAT uses the projection-based thickness approach (PBT; Dahnke et al., 2012) to reconstruct the central surface.  ' ...
